--- a/scrapper.ipynb
+++ b/scrapper.ipynb
@@ -176,20 +176,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "image_xpath = f\"//*[contains(@id, 'mount_0_0_')]/div/div/div[2]/div/div/div[1]/div[2]/div/div[1]/section/main/div/div[2]/div/div[1]/div[{0 + 1}]/a/div[1]/div[2]\"\n",
-    "driver.find_element(By.XPATH, image_xpath).click()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
+    "image_xpath = f\"//*[contains(@id, 'mount_0_0_')]/div/div/div[2]/div/div/div[1]/div[2]/div/div[1]/section/main/div/div[2]/div/div[1]/div[{0 + 1}]/a/div[1]/div[2]\"\n",
+    "driver.find_element(By.XPATH, image_xpath).click()\n",
     "# Define the function to generate dynamic XPath with any numeric value in div[]\n",
     "def dynamic_xpath(toggle):\n",
     "    # Construct the dynamic XPath with a wildcard (*) for any div[number]\n",
@@ -712,6 +704,15 @@
    ],
    "source": [
     "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data/adidas.csv', index=False)"
    ]
   }
  ],
